--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ body {
     background-color: bisque;
     color: black;
 }
+
+img {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    animation: backandfourth 25s infinite
+} 
+
+@keyframes backandfourth {
+    0%, 100% { left: 0; }
+    50% {left: 100%; }
+}
+
 .dark-mode {
     background-color: black;
     color: white;
@@ -16,6 +29,8 @@ button {
 p {
     font-size: larger;
 }
+
+
 
 #modeSwitch {
     float: right;
